memo/app/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: db
    name: db
spec:
    replicas: 1
    selector:
        matchLabels:
            app: db
    template:
        metadata:
            labels:
                app: db
        spec:
            containers:
                - image: k8spracticalguide/mysql:5.7.22
                  name: mysql
