memo/app/db-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mattermost-db
    labels:
        app: mattermost-db
spec:
    type: ClusterIP
    selector:
        app: db
    ports:
        - name: "3306"
          port: 3306
          protocol: TCP
          targetPort: 3306
