memo/app/mysql-svc-read.yaml
apiVersion: v1
kind: Service
metadata:
    name: mysql-read
    labels:
        app: mysql
spec:
    ports:
    - name: mysql
      port: 3306
    selector:
        app: mysql
