memo/app/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: mysql
    labels:
        app: mysql
spec:
    clusterIP: None
    selector:
        app: mysql
    ports:
        - port: 3306
          name: mysql
