memo/app/mattermost-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: mattermost
spec:
    rules:
        - host: chat.192.168.64.6.nip.io
          http:
              paths:
                  - backend:
                      serviceName: mattermost
                      # servicePort: 8065
                      servicePort: 80
